[package]
name = "router-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "0.3.22"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }


# proc macro crate
[lib]
proc-macro = true
